--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 <body>
 
   <div class="sidebar">
-    <div class="sidebar-item active" data-page="store">🛒 Магазин</div>
-    <div class="sidebar-item" data-page="library">📦 Библиотека</div>
+    <div class="sidebar-item active" data-page="store">Магазин</div>
+    <div class="sidebar-item" data-page="library">Библиотека</div>
   </div>
 
   <div class="main">
@@ -188,11 +188,11 @@
     </div>
 
     <div id="page-library" class="page" style="display:none;">
-      <h1 class="page-title">Моя библиотека</h1>
-      <p>Установленные расширения появятся здесь.</p>
+      <h1 class="page-title">библиотека</h1>
+      <p>Установленные расширения или приложения появятся здесь.</p>
     </div>
 
-    <footer>© 2025 Tybe Software. Все права защищены.</footer>
+    <footer>© 2025 Tybe Corp. Все права защищены.</footer>
   </div>
 
   <script>
